--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@
     border-radius: 10px;
     box-shadow: -8px -8px 15px rgba(255, 255, 255, 0.1),5px 15px 15px rgba(0, 0, 0, 0.2);
     background:transparent;
-    color:#fff;
+    color:rgb(154, 149, 149);
     cursor:pointer;
     margin:10px;
 }
@@ -39,6 +39,7 @@ form .display {
     display:flex;
     justify-content:flex-end;
     margin:20px 0;
+    background: #fff;
 }
 form .display input {
     text-align:right;
